[package]
name = "swapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
alloy = { version = "0.2", features = ["full"] }
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
eyre = "0.6.12"